# WC

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/wcsweep/: __init__.py  config.py  db.py  models.py
src/wcsweep/bot/: app.py  commands.py  jobs.py  keyboards.py
src/wcsweep/bot/handlers/: admin.py  common.py  player.py
src/wcsweep/scripts/: seed_teams.py
src/wcsweep/services/: deposits.py  draft.py  game.py  picks.py  players.py  scoring.py
src/wcsweep/services/results/: __init__.py  footballdata.py  provider.py  sync.py
tests/: conftest.py  test_draft.py  test_game.py  test_picks_unique.py  test_results_provider.py  test_results_sync.py  test_scoring.py
