[project]
name = "wc-sweepstake"
version = "0.1.0"
description = "Telegram bot managing a World Cup 2026 sweepstake (registration, deposits, snake draft, scoring, leaderboard)."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]==21.6",
    "SQLAlchemy==2.0.35",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "psycopg[binary]==3.2.3",  # Postgres driver (prod)
    "tzdata==2024.2",          # IANA tz db for zoneinfo (slim images lack it)
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[project.scripts]
wcsweep-bot = "wcsweep.bot.app:main"
wcsweep-seed = "wcsweep.scripts.seed_teams:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
